--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+  <meta content="yes" name="apple-mobile-web-app-capable">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
   <meta http-equiv="Cache-control" content="no-cache">
