--- a/protal/chat.html
+++ b/protal/chat.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="./chat.css"/>
-        <script src="./util.js"></script>
-        <script src="./jquery-3.4.1.min.js"></script>
-        <script src="./socketjs.min.js"></script>
+        <script src="util.js"></script>
+        <script src="jquery-3.4.1.min.js"></script>
+        <script src="socketjs.min.js"></script>
         <script>
             $(document).ready(function(){
                 var host = 'http://localhost:9001'
