--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta http-equiv="Cache" content="no-cache">
   <meta charset="utf-8">
   <meta name="author" content="旭东IM">
+  <link rel="shortcut icon" href="favicon.png"/>
 </head>
 <body>
 <div id="app"></div>
