--- a/public/protal/chat.html
+++ b/public/protal/chat.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="./chat.css"/>
+        <link rel="stylesheet" href="chat.css"/>
         <script src="util.js"></script>
         <script src="jquery-3.4.1.min.js"></script>
         <script src="socketjs.min.js"></script>
