--- a/portal/chat.html
+++ b/portal/chat.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="chat.css"/>
         <script src="jquery-3.4.1.min.js"></script>
         <script src="sockjs.min.js"></script>
+        <script src="stomp.min.js"></script>
         <script src="chat.js"></script>
         <script>
             // 传递参数初始化，在需要调用到时候进行调用，也可以之后调用setOptions方法来进行设置
