--- a/portal/test.html
+++ b/portal/test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="chat.css"/>
-    <script type="text/javascript" src="../portal/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="chat.portal.js"></script>
     <script>
         $(document).ready(function() {
