--- a/portal/test.html
+++ b/portal/test.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="chat.portal.js"></script>
     <script>
         $(document).ready(function() {
-            ChatRoom.instance()
+            Chat.instance()
         })
     </script>
 </head>
