testing 服务器环境

--- a/portal/test.html
+++ b/portal/test.html
@@ -9,6 +9,9 @@
 <div id="showGuestDom">显示留言</div>
 </body>
 <script>
+
+    console.log(111111111111)
+
     var loginUser = {};
     $(document).ready(function () {
         var Chat = window.Chat.instance();
