--- a/portal/dev-test.html
+++ b/portal/dev-test.html
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <title></title>
+    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
+    <meta charset="utf-8">
+    <meta name="author" content="旭东IM">
+    <link rel="shortcut icon" href="favicon.png"/>
     <link rel="stylesheet" href="chat.css"/>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="sockjs.min.js"></script>
