--- a/portal/test.html
+++ b/portal/test.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <title></title>
+    <meta name="viewport" content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
+    <meta charset="utf-8">
+    <meta name="author" content="旭东IM">
+    <link rel="shortcut icon" href="favicon.png"/>
+    <link rel="stylesheet" href="chat.css"/>
     <link rel="stylesheet" href="chat.css"/>
     <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="chat.portal.js"></script>
@@ -9,9 +21,6 @@
 <div id="showGuestDom">显示留言</div>
 </body>
 <script>
-
-    console.log(111111111111)
-
     var loginUser = {};
     $(document).ready(function () {
         var Chat = window.Chat.instance();
