动态访客名称

--- a/portal/dev-test.html
+++ b/portal/dev-test.html
@@ -24,8 +24,8 @@
 <script>
     var Chat = window.Chat.instance();
     Chat.setLogin({
-        id: '2222222',
-        userName: '李四',
+        id: '111111111',
+        userName: '张三',
         account: '176821312121'
     });
     $('#showChat').on('click',function () {
