ie 低版本兼容jquey

--- a/portal/test.html
+++ b/portal/test.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="favicon.png"/>
     <link rel="stylesheet" href="chat.css"/>
     <link rel="stylesheet" href="chat.css"/>
-    <script type="text/javascript" src="jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="chat.portal.js"></script>
 </head>
 <body>
