--- a/portal/dev-test.html
+++ b/portal/dev-test.html
@@ -12,7 +12,7 @@
     <meta name="author" content="旭东IM">
     <link rel="shortcut icon" href="favicon.png"/>
     <link rel="stylesheet" href="chat.css"/>
-    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="sockjs.min.js"></script>
     <script src="stomp.min.js"></script>
     <script src="chat.js"></script>
